# camerakit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  setup.cfg
LICENSES/: BSD-3-Clause-pose2sim.txt
camerakit/: __init__.py  calibration.py  capture.py  cli.py  devices.py  init.py  report.py
camerakit/core/: __init__.py  calibration_data.py  calibration_file.py  camera.py  multicam_system.py
camerakit/utils/: __init__.py  calib.py  calibration.py  common.py  enumerator.py  sync.py
camerakit/utils/pose/: __init__.py  from_board_outer.py  from_keypoints.py
docs/: Makefile  calibration.rst  capture.rst  cli.rst  conf.py  development.rst  file-format.rst  index.rst  make.bat  python-api.rst  quickstart.rst  release-notes.rst  requirements.txt  roadmap.rst
