[metadata]
name = camerakit
version = 1.0.0
author = Saif Khan
author_email = saifkhichi96@gmail.com
description = CLI Tools and Python API for Camera Calibration and Synchronized Capture
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/saifkhichi96/camerakit
keywords = camera, calibration, synchronized capture
license = MIT License
license_files = LICENSE
platform = any
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/saifkhichi96/camerakit/issues

[options]
install_requires =
    easydict
    matplotlib
    mpl_interactions
    numpy
    opencv-python
    toml
packages = find:

[options.entry_points]
console_scripts =
    ck-calibrate = camerakit.calibration:main
    ck-capture = camerakit.capture:main
