[metadata]
name = camerakit
version = 2.0.0
author = CameraKit Contributors
description = CLI and Python toolkit for camera calibration and synchronized capture
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/saifkhichi96/camerakit
keywords = camera, calibration, synchronized capture
license = MIT License
license_files =
    LICENSE
    THIRD_PARTY_NOTICES.md
    licenses/*.txt
platform = any
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/saifkhichi96/camerakit/issues

[options]
install_requires =
    easydict
    matplotlib
    mpl_interactions
    numpy
    opencv-python
    toml
    lxml
packages = find:

[options.extras_require]
docs =
    sphinx>=7,<9
    furo>=2024.8.6

[options.entry_points]
console_scripts =
    camerakit = camerakit.cli:main
